--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,5 +11,5 @@
     <string name="temp_is_freezing">It is freezing</string>
     <string name="title_activity_display_weather">DisplayWeather</string>
     <string name="action_settings">Settings</string>
-    <string name="api_endpoint">https://query.yahooapis.com/v1/public/yql?q=select item.condition from weather.forecast where woeid in (select woeid from geo.places(1) where text=\"%s\")&amp;format=json</string>
+    <string name="api_endpoint">https://query.yahooapis.com/v1/public/yql?q=select%%20item.condition%%20from%%20weather.forecast%%20where%%20woeid%%20in%%20(select%%20woeid%%20from%%20geo.places(1)%%20where%%20text=%%22%s%%22)&amp;format=json</string>
 </resources>
