--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,10 +5,11 @@
     <string name="confirm_button_text">Confirm</string>
     <string name="salutation">Hi</string>
     <string name="from">from</string>
-    <string name="temp_is_warm">It is very warm currently</string>
-    <string name="temp_is_normal">It is nice today</string>
-    <string name="temp_is_cold">It is cold right now</string>
-    <string name="temp_is_freezing">It is freezing</string>
+    <string name="temp_is_warm">It is warm currently.</string>
+    <string name="temp_is_normal">It is nice outside today.</string>
+    <string name="temp_is_cold">It is cold right now.</string>
+    <string name="temp_is_freezing">It is freezing.</string>
+    <string name="no_info">No information about the temperature in your city.</string>
     <string name="title_activity_display_weather">DisplayWeather</string>
     <string name="action_settings">Settings</string>
     <string name="api_endpoint">https://query.yahooapis.com/v1/public/yql?q=select%%20item.condition%%20from%%20weather.forecast%%20where%%20woeid%%20in%%20(select%%20woeid%%20from%%20geo.places(1)%%20where%%20text=%%22%s%%22)&amp;format=json</string>
